--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </path>
         </svg>
         by
-        <a href="https://github.com/isaacpontes" target="_blank">@isaacpontes</a>
+        <a href="https://github.com/DFmaximo" target="_blank">Diego Fernando</a>
     </footer>
 </body>
 
