correção no texto

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="gallery">
                 <span class="gallery__img-wrapper">
                     <img class="gallery__img" src="img/harbor_seal.jpg" alt="" />
-                </span>git add README.md
+                </span>
                 <span class="gallery__img-wrapper">
                     <img class="gallery__img" src="img/grey_seal.jpg" alt="" />
                 </span>
