--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <h2 class="section__title">Explorando o mundo das focas</h2>
             <img class="section__img" src="img/pexels-minsu-b-11932453.jpg" alt="" />
             <p class="section__text">
-                Segure as nadadeiras, porque estamos prestes a embarcar em uma jornada
-                na vida das focas! Estes adoráveis ​​mamíferos aquáticos são verdadeiras estrelas
-                do oceano, e eles têm algumas histórias muito legais para contar.
-                Do frio do Ártico às costas ensolaradas, as focas dominaram a arte de
-                aproveitando a vida acima e abaixo das ondas. Vamos mergulhar no
+                Agarrem-se às barbatanas, porque estamos prestes a embarcar numa viagem
+                à vida das focas! Estes adoráveis mamíferos aquáticos são verdadeiras estrelas
+                do oceano, e têm histórias muito fixes para contar.
+                Do frio do Ártico às praias ensolaradas, as focas dominam a arte de
+                aproveitar a vida acima e abaixo das ondas. Vamos mergulhar nas
                 águas profundas do conhecimento das focas!
             </p>
         </section>
@@ -44,30 +44,30 @@
             <img class="section__img-inline" src="img/pexels-sabine-freiberger-16788877.jpg" alt="" />
             <div class="section__text-inline">
                 <p>
-                    As focas são conhecidas por suas elegantes habilidades de natação, muitas vezes rivalizando
-                    aqueles dos nadadores olímpicos de primeira linha. Suas nadadeiras, semelhantes a
-                    atletas bem treinados, guie-os sem esforço pela água com um
-                    graça hipnotizante.
+                    As focas são conhecidas pelas suas elegantes capacidades de natação, muitas vezes
+                    as de nadadores olímpicos de alto nível. As suas barbatanas, semelhantes às de
+                    atletas bem treinados, guiam-nas sem esforço pela água com uma
+                    com uma graça hipnotizante.
                 </p>
                 <p>
-                    Um aspecto fascinante é o seu isolamento natural: camadas de gordura.
-                    Este mecanismo de aquecimento integrado permite que eles prosperem em vários
-                    temperaturas da água. Imagine essas criaturas deslizando sob o
-                    superfície da água – uma dança contínua com as correntes, suas linhas aerodinâmicas
-                    corpos movendo-se com fluidez e elegância. É um testamento para
-                    a adaptabilidade da natureza e a beleza inspiradora da vida aquática.
+                    Um aspeto fascinante é o seu isolamento natural: camadas de gordura.
+                    Este mecanismo de calor incorporado permite-lhes prosperar em várias
+                    temperaturas da água. Imagine estas criaturas a deslizar sob a superfície
+                    da água - uma dança perfeita com as correntes, os seus corpos
+                    corpos que se movem com fluidez e elegância. É um testemunho da
+                    é um testemunho da adaptabilidade da natureza e da beleza inspiradora da vida aquática.
                 </p>
             </div>
         </section>
 
         <section class="section">
-            <h2 class="section__title">Seal Hangouts</h2>
+            <h2 class="section__title">Habitat</h2>
             <img class="section__img" src="img/pexels-diana-4445229.jpg" alt="" />
             <p class="section__text">
-                Adivinhe onde você pode encontrar essas criaturas fantásticas? Do polar gelado
-                zonas de mergulho para os pontos frios e ensolarados da costa, as focas sabem como escolher
-                suas almofadas. Eles adoram descansar nas costas rochosas, exibindo seus
-                pele beijada pelo sol e, ocasionalmente, fazendo o cha-cha-slide para o
+                Adivinha onde podes encontrar estas criaturas fantásticas? Desde as geladas zonas de mergulho
+                polares às zonas costeiras ensolaradas, as focas sabem escolher
+                as suas almofadas. Adoram relaxar nas costas rochosas, mostrando o seu
+                o seu pelo beijado pelo sol e, ocasionalmente, fazer o cha-cha-slide para a
                 água.
             </p>
         </section>
@@ -89,11 +89,11 @@
                 </span>
             </div>
             <p class="section__text">
-                Conheça os VIPs (Pinípedes Muito Importantes)! Temos o selo do porto,
-                a foca cinza, o elefante marinho (sim, aquele com o hilariante
-                schnoz) e a feroz foca-leopardo. É como um elenco repleto de estrelas
-                o oceano! Cada um tem suas próprias peculiaridades e habilidades, o que os torna os verdadeiros
-                ícones do tapete vermelho subaquático.
+                Conheça os VIPs (Pinípedes Muito Importantes)! Temos a foca do porto,
+                a foca cinzenta, o elefante-marinho (sim, aquele com o nariz hilariante) e a feroz foca-leopardo. É como
+                um elenco repleto de estrelas do
+                do oceano! Cada uma tem as suas próprias peculiaridades e habilidades, o que as torna os verdadeiros
+                ícones da passadeira vermelha subaquática.
             </p>
         </section>
 
@@ -102,16 +102,14 @@
             <img class="section__img-inline" src="img/pexels-daniel-lee-3187036.jpg" alt="" />
             <div class="section__text-inline">
                 <p>
-                    Mergulhe no mundo das focas, aquelas encantadoras criaturas marinhas com um
-                    talento para o extraordinário. De prender a respiração como
-                    campeões subaquáticos a usarem seus bigodes para GPS subaquático, esses
-                    maravilhas marinhas são um empecilho.
+                    Mergulhe no mundo das focas, essas encantadoras criaturas marinhas com um toque de extraordinário.
+                    Desde susterem a respiração como campeões subaquáticos até utilizarem os seus bigodes como GPS
+                    subaquático, estas maravilhas marinhas são um verdadeiro espetáculo.
                 </p>
                 <p>
-                    As focas arrasam na arte de prender a respiração, fazendo com que qualquer mergulhador profissional
-                    verde de inveja. E esses bigodes? Eles são como se fossem da natureza
-                    GPS, guiando esses exploradores subaquáticos através de suas aventuras aquáticas
-                    escapadas.
+                    As focas dominam a arte de suster a respiração, deixando qualquer mergulhador profissional verde de
+                    inveja. E aqueles bigodes? São como o GPS da natureza, guiando estes exploradores GPS da natureza,
+                    guiando estes exploradores subaquáticos nas suas aquáticas
                 </p>
                 <p>
                     Para um mergulho mais profundo na grandiosidade das focas, visite
